# CocodeAI

./: .gitignore  AGENTS.md  BACKEND.md  CONTRIBUTING.md  DEV_GUIDE.md  README.md  package-lock.json  package.json  preload.ts
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build-desktop-dev.yml  release-desktop.yml
adapters/dingtalk/: ai-card.ts
adapters/feishu/: cardkit.ts
adapters/wechat/: protocol.ts
desktop/: README.md  index-html.test.ts  index.html  package.json  vite-config.test.ts
desktop/scripts/: build-macos-arm64.sh  build-sidecars.ts  build-windows-x64.ps1  e2e-context-usage-live-agent-browser.sh  e2e-deepseek-thinking-ui-agent-browser.sh  e2e-install-center-agent-browser.sh  e2e-parallel-providers-agent-browser.sh  e2e-rewind-agent-browser.sh  e2e-rewind-complex-agent-browser.sh  e2e-slash-plugin-agent-browser.sh
desktop/sidecars/: launcherRouting.test.ts  (+1 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  windows-installer-hooks.nsh
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  macos_notifications.m  main.rs
docs/: index.md
release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md  v0.3.0.md  v0.3.1.md
scripts/: release.ts  repro-issue-247-real.ts  start-web-ui.sh
src/: localRecoveryCli.ts  main.tsx  setup.ts
(+220 files in other folders)
