[package]
name = "cocodeai"
version = "0.3.1"
edition = "2021"

[lib]
name = "claude_code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.0", features = ["tray-icon"] }
tauri-runtime = "=2.11.0"
tauri-runtime-wry = "=2.11.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9.0"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.13", default-features = false, features = ["system-proxy"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }
